--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^11.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3"
   },
